--- a/index.html
+++ b/index.html
@@ -4,10 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/default.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>국립중앙도서관</title>
 </head>
 <body>
-    
+    <div class="header-wrap">
+        <!-- <div class="notice">
+        </div>    -->
+        <header>
+            <nav class="lnb clear">
+                <ul class="clear">
+                    <li><a href="">로그인</a></li>
+                    <li><a href="">회원가입</a></li>
+                    <li><a href="">내서재</a></li>
+                    <li><a href="">바구니</a></li>
+                    <li><a href="">ENGLISH</a></li>
+                </ul>
+            </nav>
+            <div class="logo">
+                <h1>
+                    <a href="https://www.nl.go.kr/" aria-label="국립중앙도서관 메인페이지로 이동">
+                        <span class="hide">문화체육관광부 국앙중립도서관</span>
+                    </a>
+                </h1>
+            </div>
+            <nav class="gnb">
+                <ul>
+                    <li><a href="">자료검색</a></li>
+                    <li><a href="">디지털컬렉션</a></li>
+                    <li><a href="">신청 &middot; 참여</a></li>
+                    <li><a href="">도서관 이용</a></li>
+                    <li><a href="">도서관 소개</a></li>
+                </ul>
+            </nav>
+            <div class="library_info">
+                <h5>1월 20일</h5>
+                <p>운영시간 10:00 ~ 17:00</p>>
+            </div>
+        </header>
+    </div><!--header-wrap-->
 </body>
 </html>
