--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <!-- <div class="notice">
         </div>    -->
         <header>
-            <nav class="lnb clear">
-                <ul class="clear">
+            <nav class="lnb">
+                <ul class="">
                     <li><a href="">로그인</a></li>
                     <li><a href="">회원가입</a></li>
                     <li><a href="">내서재</a></li>
