검색어 영역 추가

--- a/index.html
+++ b/index.html
@@ -124,13 +124,69 @@
         </header>
     </div><!--header-wrap-->
     <div id="container" class="container">
-        <div id="content" class="contnets">
-            <div id="search" class="search" >
+        <div class="contnets">
+            <div class="search" >
                 <div class="search-inner">
                     <div class="search-box">
-                        <input type="text">
-
+                        <input type="text" placeholder="검색어를 입력해주세요.">
+                        <button>다국어입력기</button>
                     </div>
+                    <div><button>검색</button></div>
+                    <div><button>상세검색</button></div>
+                </div>
+            </div>
+            <div class="service">
+                <div class="service-inner">
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="./images/service1.png" alt="자료 당일 신청">
+                                <p>자료 당일신청</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/service2.png" alt="도서관 방문 예약">
+                                <p>도서관 방문 예약</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/service3.png" alt="디지털도서관 예약">
+                                <p>디지털도서관 예약</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/service4.png" alt="온라인 견학">
+                                <p>온라인 견학</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/service5.png" alt="이용자 교육">
+                                <p>이용자 교육</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/service6.png" alt="편의시설">
+                                <p>편의시설</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/service7.png" alt="찾아오시는 길">
+                                <p>찾아오시는 길</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/service8.png" alt="전체보기/설정">
+                                <p>전체보기/설정</p>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
