--- a/index.html
+++ b/index.html
@@ -189,6 +189,47 @@
                     </ul>
                 </div>
             </div>
+            <div class="covid">
+                <div class="covid-inner">
+                    <a href="">
+                        <span>코로나바이러스감염증 
+                            <b>도서관을 위한 참고 서비스</b>
+                            <span class="link">바로가기</span>
+                        </span>
+                    </a>
+                </div>
+            </div>
+            <div class="sites">
+                <div class="sites-inner">
+                    <h5>관내 사이트</h5>
+                    <ul>
+                        <li><a href="">일반이용자</a></li>
+                        <li><a href="">서서 &middot; 연구자</a></li>
+                        <li><a href="">출판사</a></li>
+                    </ul>
+                    <div>
+                        <div>
+                            <ul>
+                                <li><a href="">국가자료종합목록</a></li>
+                                <li><a href="">도서관 정보 나루</a></li>
+                                <li><a href="">인문열차, 삶을 달리다</a></li>
+                                <li><a href="">한국고전적종합목록시스템</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="">국가전자도서관</a></li>
+                                <li><a href="">북한자료센터</a></li>
+                                <li><a href="">책바다(국가상호대차)</a></li>
+                                <li><a href="">ISNI-KOREA</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="">대한민국신문아카이브</a></li>
+                                <li><a href="">웹자원검색(OASIS)</a></li>
+                                <li><a href="">책이음</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+           </div>      
         </div>
     </div>
 </body>
