--- a/index.html
+++ b/index.html
@@ -264,8 +264,11 @@
                         </div>
                     </div>
                 </div>
+           </div>
+           <div class="public">
+
            </div>      
-        </div>
-    </div>
+        </div><!-- <div class="contnets">-->
+    </div><!-- <div id="container" class="container"> -->
 </body>
 </html>
