--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@
            <div class="public">
                <div class="public_inner">
                    <div class="public-top">
-                                            <!-- 도서관 일정 -->
-                        <div class="main_bx library_wrap">
-                            <strong class="title">도서관 일정</strong>
-                            <a href="https://www.nl.go.kr/NL/contents/N41200000000.do" class="main_btn_more_w" data-focus="focus" title="">더보기</a>
-                            <div class="inner">
+                    <!-- 도서관 일정 -->
+                        <div class="calendar">
+                            <h5><strong>도서관 일정</strong></h5>
+                            <a href="" class=" plus"><span class="hide">더보기</span></a>
+                            <div class="calendar_inner">
                                 <div id="library_schedule" class="library_schedule">
                                     <!-- Empty Layout -->
                                     <div class="control_wrap">
@@ -294,7 +294,7 @@
                                     </div>
                                     <div class="table_wrap">
                                         <table>
-                                            <caption class="ir_text">도서관 행사일정 - 일, 월, 화, 수, 목, 금, 토 순서로 구성된 달력 표</caption>
+                                            <caption class="hide">도서관 행사일정 - 일, 월, 화, 수, 목, 금, 토 순서로 구성된 달력 표</caption>
                                             <thead>
                                                 <tr>
                                                     <!-- <th scope="col" class="sun"><span>일</span></th>
@@ -311,12 +311,12 @@
                                                     <input type="hidden" value="4">
                                                     <td id="2021-01-17" class="dispDay sun">
                                                         <div class="day">
-                                                            <div class="inner"><button type="button" class="closed_temporary" data-tooltip-text="임시휴관일"><strong>17</strong><span class="ir_text">임시휴관일</span></button></div>
+                                                            <div class="inner"><button type="button" class="closed_temporary" data-tooltip-text="임시휴관일"><strong>17</strong><span class="hide">임시휴관일</span></button></div>
                                                         </div>
                                                     </td>
                                                     <td id="2021-01-18" class="dispDay ">
                                                         <div class="day">
-                                                            <div class="inner"><button type="button" class="closed_temporary" data-tooltip-text="임시휴관일"><strong>18</strong><span class="ir_text">임시휴관일</span></button></div>
+                                                            <div class="inner"><button type="button" class="closed_temporary" data-tooltip-text="임시휴관일"><strong>18</strong><span class="hide">임시휴관일</span></button></div>
                                                         </div>
                                                     </td>
                                                     <td id="2021-01-19" class="dispDay ">
