--- a/index.html
+++ b/index.html
@@ -267,160 +267,90 @@
                     </div>
                 </div>
            </div>
-           <div class="public">
-               <div class="public_inner">
-                   <div class="public-top">
-                                            <!-- 도서관 일정 -->
-                        <div class="main_bx library_wrap">
-                            <strong class="title">도서관 일정</strong>
-                            <a href="https://www.nl.go.kr/NL/contents/N41200000000.do" class="main_btn_more_w" data-focus="focus" title="">더보기</a>
-                            <div class="inner">
-                                <div id="library_schedule" class="library_schedule">
-                                    <!-- Empty Layout -->
-                                    <div class="control_wrap">
-                                        <button type="button" class="btn__layer btn_month" data-layer="layer_schedule">
-                                            <strong class="month">2021년 01월</strong>
-                                        </button>
-                                        <div class="controller">
-                                            <button onclick="fn_changeMonth(&#39;0&#39;); return false;" class="btn btn_prev">
-                                                <span class="sp_main">이전</span>
-                                                12월
-                                            </button>
-                                            <button onclick="fn_changeMonth(&#39;1&#39;); return false;" class="btn btn_next">
-                                                02월
-                                                <span class="sp_main">다음</span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                    <div class="table_wrap">
-                                        <table>
-                                            <caption class="ir_text">도서관 행사일정 - 일, 월, 화, 수, 목, 금, 토 순서로 구성된 달력 표</caption>
-                                            <thead>
-                                                <tr>
-                                                    <!-- <th scope="col" class="sun"><span>일</span></th>
-                                                    <th scope="col"><span>월</span></th>
-                                                    <th scope="col"><span>화</span></th>
-                                                    <th scope="col"><span>수</span></th>
-                                                    <th scope="col"><span>목</span></th>
-                                                    <th scope="col"><span>금</span></th>
-                                                    <th scope="col" class="sat"><span>토</span></th> -->
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <input type="hidden" value="4">
-                                                    <td id="2021-01-17" class="dispDay sun">
-                                                        <div class="day">
-                                                            <div class="inner"><button type="button" class="closed_temporary" data-tooltip-text="임시휴관일"><strong>17</strong><span class="ir_text">임시휴관일</span></button></div>
-                                                        </div>
-                                                    </td>
-                                                    <td id="2021-01-18" class="dispDay ">
-                                                        <div class="day">
-                                                            <div class="inner"><button type="button" class="closed_temporary" data-tooltip-text="임시휴관일"><strong>18</strong><span class="ir_text">임시휴관일</span></button></div>
-                                                        </div>
-                                                    </td>
-                                                    <td id="2021-01-19" class="dispDay ">
-                                                        <div class="day">
-                                                            <!--
-                                                                                        [D]일정별 클래스
-                                                                                        정기휴관일인 경우 : closed 클래스
-                                                                                        임시휴관일인 경우 : closed_temporary 클래스
-                                                                                        교육인 경우 : educate 클래스
-                                                                                        클래스 대체텍스트 추가 요청드립니다.
-                                                                                        -->
-                                                            <div class="inner">
-                                                                <strong>19</strong>
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                    <td id="2021-01-20" class="dispDay today">
-                                                        <div class="day">
-                                                            <!--
-                                                                                        [D]일정별 클래스
-                                                                                        정기휴관일인 경우 : closed 클래스
-                                                                                        임시휴관일인 경우 : closed_temporary 클래스
-                                                                                        교육인 경우 : educate 클래스
-                                                                                        클래스 대체텍스트 추가 요청드립니다.
-                                                                                        -->
-                                                            <div class="inner">
-                                                                <strong>20</strong>
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                    <td id="2021-01-21" class="dispDay ">
-                                                        <div class="day">
-                                                            <!--
-                                                                                        [D]일정별 클래스
-                                                                                        정기휴관일인 경우 : closed 클래스
-                                                                                        임시휴관일인 경우 : closed_temporary 클래스
-                                                                                        교육인 경우 : educate 클래스
-                                                                                        클래스 대체텍스트 추가 요청드립니다.
-                                                                                        -->
-                                                            <div class="inner">
-                                                                <strong>21</strong>
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                    <td id="2021-01-22" class="dispDay ">
-                                                        <div class="day">
-                                                            <!--
-                                                                                        [D]일정별 클래스
-                                                                                        정기휴관일인 경우 : closed 클래스
-                                                                                        임시휴관일인 경우 : closed_temporary 클래스
-                                                                                        교육인 경우 : educate 클래스
-                                                                                        클래스 대체텍스트 추가 요청드립니다.
-                                                                                        -->
-                                                            <div class="inner">
-                                                                <strong>22</strong>
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                    <td id="2021-01-23" class="dispDay sat">
-                                                        <div class="day">
-                                                            <!--
-                                                                                        [D]일정별 클래스
-                                                                                        정기휴관일인 경우 : closed 클래스
-                                                                                        임시휴관일인 경우 : closed_temporary 클래스
-                                                                                        교육인 경우 : educate 클래스
-                                                                                        클래스 대체텍스트 추가 요청드립니다.
-                                                                                        -->
-                                                            <div class="inner">
-                                                                <strong>23</strong>
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-
-
-                                    <form name="calForm" id="calForm" method="post">
-                                        <input type="hidden" name="act" id="act">
-                                        <input type="hidden" name="schOpt4" id="schOpt4" value="4">
-                                        <input type="hidden" name="schOpt1" id="schOpt1" value="2021">
-                                        <input type="hidden" name="schOpt2" id="schOpt2" value="01">
-                                        <input type="hidden" name="siteCode" id="siteCode" value="NL">
-                                        <input type="hidden" name="schSitecode" id="schSitecode" value="NL">
-                                    </form>
-                                    <!-- //Empty Layout -->
-                                </div>
-                            </div>
-                            <div class="notify_wrap">
-                                <ul class="notify_list">
-                                    <li class="notify_item closed">정기휴관</li>
-                                    <li class="notify_item closed_temporary">임시휴관</li>
-                                    <li class="notify_item educate">전시/교육</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <!-- //도서관 일정 -->
-                   </div><!-- <div class="public-top"> -->
-                   <div class="public-btm">
-
-                   </div><!-- <div class="public-btm"> -->
-               </div>
-           </div>      
+           <div id="footer" class="footer">
+            <!-- 푸터 상단 --> 
+    <div class="footer__inner-top"> 
+     <div class="inner"> 
+      <!-- 안내 영역 --> 
+      <ul class="footer-util__list"> 
+       <li class="footer-util__item"> <a href="http://help.nl.go.kr/" target="_blank">원격헬프데스크</a> 
+        <!-- [D] 모바일에서는 미노출 --> </li> 
+       <!--<li class="footer-util__item">--> 
+       <!--<a href="https://ask.nl.go.kr/popup/userListMainAll.jsp" target="_blank">장애인전용 온라인상담</a>--> 
+       <!-- [D] 모바일에서는 미노출 --> 
+       <!--</li>--> 
+       <li class="footer-util__item"> <a href="/NL/contents/N31700000000.do">국민신문고</a> 
+        <!-- [D] PC 링크 --> 
+        <!-- 		<a href="https://www.epeople.go.kr/index.jsp" target="_blank" class="none_pc">국민신문고</a>  -->
+        <!-- [D] 모바일 링크 --> </li> 
+       <li class="footer-util__item"> <a href="/NL/contents/N70800000000.do">클린신고센터</a> </li> 
+       <li class="footer-util__item"> <a href="/NL/contents/N50108000000.do">찾아오시는 길</a> </li> 
+       <li class="footer-util__item none_mobile"> <a href="/NL/contents/N71100000000.do">사이트맵</a> </li> 
+       <li class="footer-util__item"> <a href="/NL/contents/N71210000000.do"><span class="none_mobile">누리집</span>이용가이드</a> </li> 
+      </ul> 
+      <!-- 안내 영역 --> 
+      <!-- SNS 영역 --> 
+      <ul class="footer-sns__list"> 
+       <li class="footer-sns__item"> <a href="https://www.instagram.com/nationallibraryofkorea/" class="instagram" target="_blank" title="새창 열림"> <span class="ico">인스타그램</span> </a> </li> 
+       <li class="footer-sns__item"> <a href="http://blog.naver.com/dibrary1004" class="blog" target="_blank" title="새창 열림"> <span class="ico">블로그</span> </a> </li> 
+       <li class="footer-sns__item"> <a href="https://ko-kr.facebook.com/national.library.of.korea" class="facebook" target="_blank" title="새창 열림"> <span class="ico">페이스북</span> </a> </li> 
+       <li class="footer-sns__item"> <a href="https://twitter.com/library1004" class="twitter" target="_blank" title="새창 열림"> <span class="ico">트위터</span> </a> </li> 
+       <li class="footer-sns__item"> <a href="https://www.youtube.com/channel/UCKjWKI1yRlzWfgnF98HZ_TA" class="youtube" target="_blank" title="새창 열림"> <span class="ico">유투브</span> </a> </li> 
+      </ul> 
+      <!-- //SNS 영역 --> 
+     </div> 
+    </div> 
+    <!-- //푸터 상단 --> 
+    <!-- 푸터 하단 --> 
+    <div class="footer__inner-bottom"> 
+     <div class="inner"> 
+      <!-- PC 정책, 법령 --> 
+      <div class="policy-wrap"> 
+       <ul class="policy__list"> 
+        <li class="policy__item"><a href="/NL/contents/N70100000000.do">개인정보처리방침</a></li> 
+        <li class="policy__item"><a href="/NL/contents/N70200000000.do">국립중앙도서관 윤리강령</a></li> 
+        <li class="policy__item"><a href="/NL/contents/N70300000000.do">도서관법령</a></li> 
+        <li class="policy__item"><a href="/NL/contents/N70400000000.do">이용봉사헌장</a></li> 
+        <li class="policy__item"><a href="/NL/contents/N50803010000.do">사전정보공개</a></li> 
+        <li class="policy__item"><a href="/NL/contents/N70600000000.do">저작권정책</a></li> 
+       </ul> 
+      </div> 
+      <!-- //PC 정책, 법령 --> 
+      <!-- MO 정책, 법령 --> 
+      <div class="mo_policy-wrap"> 
+       <label for="policy_page" class="ir_text">개인정보처리방침</label> 
+       <select id="policy_page" class="policy-select-wrap"> <option value="/NL/contents/N70100000000.do">개인정보처리방침</option> <option value="/NL/contents/N70200000000.do">국립중앙도서관 윤리강령</option> <option value="/NL/contents/N70300000000.do">도서관법령</option> <option value="/NL/contents/N70400000000.do">이용봉사헌장</option> <option value="/NL/contents/N50803010000.do">사전정보공개</option> <option value="/NL/contents/N70600000000.do">저작권정책</option> </select> 
+       <button type="button" title="새창열림" id="policy_page_btn" class="site-go">이동</button> 
+      </div> 
+      <!-- //MO 정책, 법령 --> 
+      <!-- 유관사이트 --> 
+      <div class="family-wrap"> 
+       <label for="family_site" class="ir_text">유관사이트</label> 
+       <select id="family_site" class="family-select-wrap"> <option value="" class="opt-tit">유관사이트</option> <option value="https://www.nlcy.go.kr">국립어린이청소년도서관</option> <option value="https://sejong.nl.go.kr">국립세종도서관</option> <option value="http://www.nld.go.kr">국립장애인도서관</option> <option value="https://www.data.go.kr">공공데이터포털</option> <option value="http://www.acrc.go.kr">국민권익위원회</option> <option value="http://www.gov.kr/portal/main">정부24</option> <option value="http://mcst.go.kr">문화체육관광부</option> <option value="http://www.kpf.or.kr">한국언론진흥재단</option> <option value="http://www.museum.go.kr/uigwe/">외규장각 의궤</option> <option value="http://www.nanet.go.kr">국회도서관</option> <option value="http://www.clip.go.kr">도서관정보정책위원회</option> <option value="http://library.scourt.go.kr">법원도서관</option> <option value="http://www.kpec.or.kr">간행물윤리위원회</option> <option value="http://www.kla.kr">한국도서관협회</option> <option value="http://www.copycle.or.kr">한국복제전송저작권협회</option> <option value="http://www.libsta.go.kr">국가도서관통계시스템</option> <option value="http://www.kpla.kr">(사)공공도서관협의회</option> </select> 
+       <button type="button" title="새창열림" id="family_site_btn" class="site-go">이동</button> 
+      </div> 
+      <!-- //유관사이트 --> 
+      <!-- 국립중앙도서관 정보 --> 
+      <div class="info-wrap"> 
+       <!-- 푸터 로고 --> 
+       <em class="footer-logo" title="문화체육관광부 국립중앙도서관 로고">  </em> 
+       <!-- //푸터 로고 --> 
+       <!-- 주소, Copyright --> 
+       <ul class="contact__list"> 
+        <li class="contact__item">우편번호 06579 서울특별시 서초구 반포대로 201(반포동)</li> 
+        <li class="contact__item">문의전화 <span class="tel">02-590-0500</span> <a href="tel:02-590-0500" class="lnk_tel">02-590-0500</a> 팩스 02-590-0530 </li> 
+        <li class="contact__item copyright">Copyright© National Library of Korea. All rights reserved.</li> 
+       </ul> 
+       <!-- //주소, Copyright --> 
+      </div> 
+      <!-- //국립중앙도서관 정보 --> 
+     </div> 
+    </div> 
+    <!-- //푸터 하단 --> 
+    <!--  한국문화정보원 웹로그 --> 
+    <!-- loading layar --> 
+    <div id="loadingLayer" style="position: fixed; display: block; width: 100%; background-color: rgba(0,0,0,0.6); z-index: 9999; top: 0; left: 0;"></div> 
+    <!-- loading layar --></div>
         </div><!-- <div class="contnets">-->
     </div><!-- <div id="container" class="container"> -->
 </body>
