3단계나누기

--- a/index.html
+++ b/index.html
@@ -119,10 +119,7 @@
                     </ul>
                 </div>
             </nav>
-            <!-- <div class="library_info">
-                <h5>1월 20일</h5>
-                <p>운영시간 10:00 ~ 17:00</p>>
-            </div> -->
+            
         </header>
     </div><!--header-wrap-->
     <div id="container" class="container">
@@ -267,8 +264,11 @@
                     </div>
                 </div>
            </div>
-           <div id="footer" class="footer">
-            <!-- 푸터 상단 --> 
+        </div>
+    </div>
+    
+    <div id="footer" class="footer">
+    <!-- 푸터 상단 --> 
     <div class="footer__inner-top"> 
      <div class="inner"> 
       <!-- 안내 영역 --> 
@@ -348,10 +348,5 @@
     </div> 
     <!-- //푸터 하단 --> 
     <!--  한국문화정보원 웹로그 --> 
-    <!-- loading layar --> 
-    <div id="loadingLayer" style="position: fixed; display: block; width: 100%; background-color: rgba(0,0,0,0.6); z-index: 9999; top: 0; left: 0;"></div> 
-    <!-- loading layar --></div>
-        </div><!-- <div class="contnets">-->
-    </div><!-- <div id="container" class="container"> -->
 </body>
 </html>
