--- a/index.html
+++ b/index.html
@@ -266,48 +266,40 @@
            </div>
            <div class="public">
                <div class="public-inner">
-                   <div class="calendar">
+                   <div class="calendar left">
                        <div class="tit">
                            <h5>도서관 일정</h5>
                            <a href=""></a>
                        </div>
-                       <div class="cont">
-                           <div class="cont-inner">
+                       <div class="cont top">
 
-                           </div>
                        </div>
                    </div>
-                   <div class="participation">
+                   <div class="participation right">
                         <div class="tit">
-                            <h5></h5>
-                            <a href=""></a>
+                            <h5>신청&middot;참여 </h5>
+                            <span></span>
                         </div>
-                        <div class="cont">
-                            <div class="cont-inner">
+                        <div class="cont top">
 
-                            </div>
                         </div>
                     </div>
-                    <div class="notice">
+                    <div class="notice left">
                         <div class="tit">
-                            <h5></h5>
-                            <a href=""></a>
+                            <h5>소식알람</h5>
+                            <span></span>
                         </div>
-                        <div class="cont">
-                            <div class="cont-inner">
- 
-                            </div>
+                        <div class="cont btm">
+
                         </div>
                     </div>
-                    <div class="collection">
+                    <div class="collection right">
                         <div class="tit">
-                            <h5></h5>
+                            <h5>주제별컬렉션</h5>
                             <a href=""></a>
                         </div>
-                        <div class="cont">
-                            <div class="cont-inner">
- 
-                            </div>
+                        <div class="cont btm">
+
                         </div>
                     </div>
                </div>
