--- a/index.html
+++ b/index.html
@@ -272,7 +272,17 @@
                            <a href=""></a>
                        </div>
                        <div class="cont top">
+                           <div class="cont-top">
+                               <h5>2021년 01월</h5>
+                                <div>
+                                    <span>정기휴관</span>
+                                    <span>임시휴관</span>
+                                    <span>전시/교육</span>
+                                </div>
+                           </div>
+                           <div class="cont-btm">
 
+                           </div>
                        </div>
                    </div>
                    <div class="participation right">
@@ -281,7 +291,50 @@
                             <span></span>
                         </div>
                         <div class="cont top">
-
+                            <ul>
+                                <li>
+                                    <a href="">
+                                        <h5>사서에게 물어보세요</h5>
+                                        <p>일반인들이 궁금해하는 지식 및 학술정보에 대해 제공하는 학술정보 서비스</p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <h5></h5>
+                                        <p></p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <h5></h5>
+                                        <p></p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <h5></h5>
+                                        <p></p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <h5></h5>
+                                        <p></p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <h5></h5>
+                                        <p></p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <h5></h5>
+                                        <p></p>
+                                    </a>
+                                </li> 
+                            </ul>
                         </div>
                     </div>
                     <div class="notice left">
